# ros2_ws

./: README.md  trajectory_log.csv
cviko1/: CMakeLists.txt
cviko1/include/cviko1/: robot.hpp
cviko1/src/: cviko1_node.cpp  robot.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/abb_irb4600_ikfast/share/abb_irb4600_ikfast/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/abb_irb4600_ikfast/share/abb_irb4600_ikfast/cmake/: abb_irb4600_ikfastConfig.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake
install/abb_model/share/abb_model/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/abb_model/share/abb_model/cmake/: abb_modelConfig.cmake
install/abb_model/share/abb_model/launch/: test_irb4600.launch.xml
install/abb_model/share/abb_model/urdf/: abb_irb4600_60_205_macro.xacro  camera_macro.xacro
install/abb_moveit_config/share/abb_moveit_config/: .setup_assistant  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/abb_moveit_config/share/abb_moveit_config/config/: abb_irb.ros2_control.xacro  abb_irb.srdf  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml
install/abb_moveit_config/share/abb_moveit_config/launch/: demo.launch.py  move_group.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
install/block1_matuska/lib/block1_matuska/: teleop_node
install/block1_matuska/share/block1_matuska/: local_setup.dsv  local_setup.sh  package.bash  package.ps1  package.sh
install/block2_matuska/lib/block2_matuska/: zadanie22_node  zadanie2_node
install/block2_matuska/share/block2_matuska/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/block2_matuska/share/block2_matuska/launch/: zadanie22_launch .xml  zadanie2_launch.xml
install/block3_matuska/lib/block3_matuska/: publisher_node  zadanie3_node
install/block3_matuska/share/block3_matuska/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cv1/lib/cv1/: cv1_node
install/cv1/share/cv1/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cv1/share/cv1/cmake/: cv1Config.cmake
install/cviko1/lib/cviko1/: cviko1_node
install/cviko1/share/cviko1/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cviko1/share/cviko1/cmake/: cviko1Config.cmake
install/eigen_example/lib/eigen_example/: eigen_example
install/eigen_example/share/eigen_example/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ik_solver_example/lib/ik_solver_example/: ik_solver_example
install/ik_solver_example/share/ik_solver_example/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/matuska_interface/share/matuska_interface/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/matuska_interface/share/matuska_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  export_matuska_interface__rosidl_generator_cppExport.cmake  export_matuska_interface__rosidl_generator_pyExport-noconfig.cmake  export_matuska_interface__rosidl_generator_pyExport.cmake  export_matuska_interface__rosidl_typesupport_fastrtps_cExport.cmake  export_matuska_interface__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  matuska_interface__rosidl_typesupport_cppExport-noconfig.cmake  matuska_interface__rosidl_typesupport_introspection_cExport-noconfig.cmake  (+1 more)
install/rrm_msgs/share/rrm_msgs/: local_setup.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rrm_sim/share/rrm_sim/: local_setup.sh  package.sh
install/rrm_simple_robot_model/share/rrm_simple_robot_model/: package.bash  package.sh
install/trajectory_visualization/lib/trajectory_visualization/: trajectory_visualization
install/trajectory_visualization/share/trajectory_visualization/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/trajectory_visualization/share/trajectory_visualization/cmake/: trajectory_visualizationConfig.cmake
install/trajectory_visualization/share/trajectory_visualization/launch/: trajectory_visualization.launch.py  trajectory_visualization.launch.xml
log/: latest_build
moje_venv/: pyvenv.cfg
src/abb_irb4600_ikfast/: CMakeLists.txt  package.xml
src/abb_irb4600_ikfast/include/abb_irb4600_ikfast/: abb_irb4600_ikfast.h
src/abb_irb4600_ikfast/src/: abb_irb4600_60_205_manipulator_ikfast_solver.cpp  abb_irb_4600_ikfast.cpp
src/abb_model/: CMakeLists.txt
src/abb_model/launch/: rsp_irb4600.launch.py  rsp_irb4600.launch.xml  test_irb4600.launch.py
src/abb_model/urdf/: robot.urdf
src/abb_moveit_config/: CMakeLists.txt
src/abb_moveit_config/config/: abb_irb.urdf.xacro  initial_positions.yaml  moveit_controllers.yaml
src/abb_moveit_config/launch/: moveit_rviz.launch.py  rsp.launch.py  warehouse_db.launch.py
src/block1_matuska/: CMakeLists.txt  package.xml
src/block1_matuska/include/: logger_node.hpp
src/block1_matuska/launch/: launch.xml
src/block1_matuska/src/: logger_node.cpp  teleop_node.cpp
src/block2_matuska/: CMakeLists.txt
src/block2_matuska/src/: zadanie22_node.cpp  zadanie2_node.cpp
src/block3_matuska/: CMakeLists.txt  package.xml
src/block3_matuska/src/: publisher_node.cpp  tie.stl  zadanie3_node.cpp
src/eigen_example/: CMakeLists.txt  package.xml
src/eigen_example/src/: eigen_example.cpp
src/ik_solver_example/: CMakeLists.txt
src/ik_solver_example/src/: ik_solver_example.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/matuska_interface/: CMakeLists.txt
src/trajectory_visualization/: CMakeLists.txt  README.md
src/trajectory_visualization/src/: trajectory_visualization.cpp
(+95 files in other folders)
