<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>block3_matuska</name>
  <version>0.0.0</version>
  <description>Integration of MoveIt functionalities for ABB robot control.</description>
  <maintainer email="xmatuskam1@stuba.sk">matus</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <depend>rclcpp</depend>
  <depend>rrm_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>rclcpp_action</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
