<?xml version="1.0"?>
<package format="3">
  <name>trajectory_visualization</name>
  <version>0.0.1</version>
  <description>Trajectory visualization package</description>
  <maintainer email="michal.dobis@stuba.sk">Michal Dobis</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>sensor_msgs</depend>
  <build_depend>rclcpp</build_depend>

  <exec_depend>rclcpp</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
